fix(author): deep link alignment

--- a/site/gdocs/components/ResearchAndWriting.scss
+++ b/site/gdocs/components/ResearchAndWriting.scss
@@ -18,6 +18,10 @@ $rw-margin-bottom-grid-cell: 4px;
     @include sm-up {
         margin: 32px 0 24px;
     }
+
+    a.deep-link {
+        margin-top: 11px;
+    }
 }
 
 .research-and-writing-row__heading {
